--- a/riverintro.html
+++ b/riverintro.html
@@ -39,7 +39,7 @@
     <div class="login">
     <h1>LOGIN</h1>
          <form action="demo.html" onsubmit="check()" target="_blank" name="form1" method="post">
-        <!-- <form action="demo.html" target="_blank" name="form1" mathod="post"> -->
+        <!-- <form action="Demo.html" target="_blank" name="form1" mathod="post"> -->
             <div class="email">
             <input type="email"   id="email" name="emailid"  required placeholder="Enter your Email">
         </div>
